--- a/html/organizer-style.css
+++ b/html/organizer-style.css
@@ -14,6 +14,17 @@
     background-color: #f5d1ac;
 }
 
+
+.pink {
+    background-color: deeppink;
+    color: white;
+}
+
+.pink:hover {
+    background-color: rgba(255, 20, 147, 0.68);
+    color: white;
+}
+
 .search-box {
     width: 80%;
     margin-left: 130px;
