--- a/html/participant.css
+++ b/html/participant.css
@@ -65,3 +65,32 @@ font-size: 22px;
     padding: 10px;
 
 }
+.event-box{
+    background-color: lightgrey;
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+h4{
+    font-size: 20px;
+    font-weight: lighter;
+    margin: 10px;
+}
+
+
+.btn-container{
+    padding: 40px;
+    margin: auto;
+    width: 30%;
+}
+
+.go-back{
+    display: flex;
+    margin: 20px;
+}
+span{
+    font-weight: lighter;
+    margin-left: 20px;
+}
