--- a/style/admin-style.css
+++ b/style/admin-style.css
@@ -28,7 +28,22 @@
     border: 2px solid lightgrey;
 
 }
+.box-report{
+    padding: 40px;
+    margin: auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    border: 2px solid lightgrey;
+}
+.block-report{
+    display: flex;
 
+    margin-bottom: 20px;
+justify-content: space-between;,
+
+}
 h3{
     text-align: center;
     margin: 50px;
