--- a/style/admin-style.css
+++ b/style/admin-style.css
@@ -91,3 +91,14 @@ h3{
     margin: 20px;
     font-size: 20px;
 }
+
+.header{
+    font-size: 30px;
+    text-align: center;
+    margin: 30px;
+    font-weight: bold;
+}
+
+.report{
+    font-size: 20px;
+}
